<resources>
    <string name="app_name">Homework</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication_tv_text">Авторизация</string>
    <string name="email_et_text">Введите свою почту</string>
    <string name="confirm_btn_text">Войти</string>
    <string name="password_et_text">Введите пароль</string>
    <string name="go_to_registration_tv_text"><u>Еще не зарегистрировались?</u></string>
    <string name="registration_tv_text">Регистрация</string>
    <string name="name_et_hint">Введите свое имя</string>
    <string name="phone_et_hint">Введите свой номер телефона</string>
    <string name="password_et_hint">Введите пароль</string>
    <string name="go_to_authentication_tv_text"><u>Уже зарегистрировались?</u></string>
    <string name="registration_btn_text">Зарегистрироваться</string>
    <string name="authentication_alert_dialog_title">Неверно введены данные</string>
    <string name="addition_tv_text">Добавление фильма</string>
    <string name="title_et_hint">Введите название фильма</string>
    <string name="year_et_hint">Введите год выпуска</string>
    <string name="description_et_hint">Введите краткое описание</string>
    <string name="image_url_et_hint">Введите ссылку на картинку</string>
    <string name="add_btn_text">Добавить</string>
    <string name="ok">Ок</string>
    <string name="type_all_data">Введите все данные</string>
    <string name="movie_already_exist">Такой фильм уже добавлен</string>
    <string name="profile_tv_text">Профиль</string>
    <string name="email_tv_placeholder">Ваша почта:</string>
    <string name="name_tv_placeholder">Ваше имя:</string>
    <string name="phone_tv_placeholder">Ваш телефон:</string>
    <string name="change_phone_btn_text">Сменить номер телефона</string>
    <string name="change_password_btn_text">Сменить пароль</string>
    <string name="change_data_btn_text">Поменять данные</string>
    <string name="change_data_tv_text">Поменять данные</string>
    <string name="confirm">Подтвердить</string>
    <string name="prefs_name">movies_pref</string>
    <string name="exit_btn_text">Выйти</string>
    <string name="movie_title_placeholder">Название фильма</string>
    <string name="movie_year_tv_text">Год выпуска: </string>
    <string name="movie_desc_tv_text">Описание:</string>
    <string name="rating_tv_placeholder">Рейтинг:</string>
    <string name="all_movies_tv_text">Все фильмы</string>
    <string name="fav_movies_tv_text">Избранное</string>
    <string name="no_movies_alert_text">Фильмов в базе нет</string>
</resources>