<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegistrationFragment">

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/registration_tv_text"
        android:textAlignment="center"
        android:layout_margin="32dp"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registration_tv"
        android:layout_margin="32dp"
        android:hint="@string/email_et_text"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        android:layout_margin="32dp"
        android:hint="@string/name_et_hint"
        android:autofillHints="name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_et"
        android:layout_margin="32dp"
        android:hint="@string/phone_et_hint"
        android:autofillHints="name"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_et"
        android:layout_margin="32dp"
        android:hint="@string/password_et_hint"
        android:autofillHints="name"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/go_to_authentication_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        android:text="@string/go_to_authentication_tv_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:layout_margin="32dp" />

    <Button
        android:id="@+id/registration_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="@string/registration_btn_text"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>