<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/change_data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/change_data_tv_text"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/change_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_data_tv"
        android:hint="@string/phone_et_hint"
        android:layout_margin="16dp"
        android:autofillHints="phone"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/change_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_phone_et"
        android:layout_margin="16dp"
        android:hint="@string/password_et_hint"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_password_et"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>