<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/movie_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Название фильма"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/movie_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/movie_title_tv"
        android:layout_margin="16dp"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/movie_year_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_iv"
        android:text="@string/movie_year_tv_text"
        android:textSize="24sp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/movie_desc_tv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/movie_year_tv"
        android:text="@string/movie_desc_tv_text"
        android:textSize="24sp"
        android:layout_margin="16dp"/>

    <SeekBar
        android:id="@+id/rating_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_desc_tv"
        android:layout_margin="16dp"
        android:max="5"
        android:min="1"/>

    <TextView
        android:id="@+id/rating_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rating_sb"
        android:layout_margin="16dp"
        android:text="@string/rating_tv_placeholder"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>