<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_tv_text"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/data_change_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="@id/profile_tv"
        app:layout_constraintBottom_toBottomOf="@id/profile_tv"
        app:layout_constraintStart_toEndOf="@id/profile_tv"
        android:layout_marginStart="16dp"
        android:background="@drawable/baseline_edit_24"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_tv_placeholder"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_tv_placeholder"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone_tv_placeholder"
        android:textSize="28sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_profile_btn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_tv"
        app:layout_constraintBottom_toTopOf="@id/exit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/baseline_delete_forever_24"/>

    <View
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="@id/phone_tv"
        app:layout_constraintBottom_toTopOf="@id/exit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="34dp"
        android:background="@drawable/circle"/>

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="@string/exit_btn_text"
        android:textSize="24sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>